--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vortex Client</title>
     <script src="https://cdn.tailwindcss.com"></script>
-	<link rel="icon" type="image/x-icon" href="vortexicon.png">
+    <link rel="icon" type="image/x-icon" href="vortexicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
@@ -29,6 +29,13 @@
 <body class="bg-gray-950 text-gray-200">
 
     <header class="py-20 px-4 md:px-8 lg:px-16 text-center bg-gray-900 border-b border-gray-800">
+        <nav class="absolute top-0 left-0 right-0 p-4 z-10 flex flex-wrap justify-center space-x-4 md:space-x-8 text-lg font-semibold text-gray-400">
+            <a href="#about" class="hover:text-purple-400 transition-colors">About</a>
+            <a href="#features" class="hover:text-purple-400 transition-colors">Features</a>
+            <a href="#license" class="hover:text-purple-400 transition-colors">License</a>
+            <a href="#community" class="hover:text-purple-400 transition-colors">Community</a>
+            <a href="pricing.html" class="hover:text-purple-400 transition-colors">Pricing</a>
+        </nav>
         <div class="max-w-4xl mx-auto">
             <h1 class="text-5xl md:text-6xl font-bold text-white mb-4 leading-tight">Vortex Client</h1>
             <p class="text-lg md:text-xl text-gray-400 mb-8">A paid hybrid hacked client for Minecraft 1.8.9, combining performance, customization, and advanced modules.</p>
@@ -86,6 +93,12 @@
             </div>
         </section>
 
+        <section id="pricing-cta" class="mb-24 text-center">
+            <h2 class="text-3xl md:text-4xl font-bold text-white mb-4">Ready to Get an Edge?</h2>
+            <p class="text-lg text-gray-300 mb-8 max-w-2xl mx-auto">Explore our pricing plans and unlock the full potential of Vortex Client.</p>
+            <a href="pricing.html" class="inline-block px-8 py-4 bg-gradient-to-r from-purple-600 to-indigo-600 text-white font-semibold rounded-full shadow-lg hover:shadow-xl transition-transform transform hover:scale-105">View Pricing</a>
+        </section>
+
         <section id="license" class="mb-24">
             <div class="max-w-3xl mx-auto p-12 rounded-xl glass-bg shadow-2xl text-center border-l-4 border-purple-600">
                 <h2 class="text-3xl md:text-4xl font-bold mb-4 text-white">License & Access</h2>
@@ -110,7 +123,7 @@
                 <a href="https://discord.gg/qkUWme3mUg" class="text-gray-400 hover:text-purple-400 transition-colors">
                     <i class="fab fa-discord text-4xl"></i>
                 </a>
-                <a href="https://youtube.com/@" class="text-gray-400 hover:text-purple-400 transition-colors">
+                <a href="https://www.youtube.com/@VortexClientSTA" class="text-gray-400 hover:text-purple-400 transition-colors">
                     <i class="fab fa-youtube text-4xl"></i>
                 </a>
             </div>
